# vpp-rag-agent

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: project-review.md  roadmap.md  technology-requirements-analysis.md
src/: __init__.py  __main__.py  cli.py  health.py
src/agent/: __init__.py  graph.py
src/clients/: entsoe_client.py
src/cmd/: ask_commands.py  commons.py  eval_commands.py  graph_commands.py  health_commands.py  index_commands.py
src/entsoe/: __init__.py  client.py
src/eval/: __init__.py  dataset.py  langsmith_sync.py  metrics.py  report.py  runner.py
src/models/: __init__.py  graph.py  internals.py
src/rag/: __init__.py  vectorstore.py
src/service/: __init__.py  agent.py  checkpoints.py  entity_tags.py  graph_ingest.py  graph_search.py  graph_store.py  hybrid_retriever.py  rag.py  react_agent.py  retriever_config.py  subgraphs.py  tools.py
src/utils/: __init__.py  console.py  exceptions.py
tests/: test_entsoe_client.py
tests/clients/: __init__.py  test_entsoe_client.py
tests/e2e/: test_entsoe_flow.py
tests/eval/: multiturn_eval_set.jsonl  regulation_eval_set.jsonl  test_metrics.py  test_multiturn_runner.py  test_report.py  test_runner.py
tests/service/: test_agent_maturity.py  test_agent_tools.py  test_graph_ingest.py  test_graph_search.py  test_graph_store.py  test_hybrid_retriever.py  test_rag_retriever.py
