[project]
name = "vpp-rag-agent"
version = "0.1.0"
description = "LangGraph + RAG agent for ENTSO-E electricity prices and grid regulations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "imalkov82" }]
dependencies = [
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",
    "pypdf>=4.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
vpp-rag = "src.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.13.0",
    "types-requests>=2.31.0",
    "isort>=5.13.0",
    "pre-commit>=4.0.0",
    "pre-commit-hooks>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
exclude = ["^tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-p no:debugging"

[tool.isort]
profile = "black"
